# platform.core.security.security-manager

./: CMakeLists.txt  app-rules-template.smack  project.config
db/: 240.security-manager.db-update.sh  CMakeLists.txt  db-update.sh  db.sql  update.sh
db/updates/: update-db-to-v2.sql  update-db-to-v3.sql  update-db-to-v4.sql
migration/: security-manager-migration.in
packaging/: security-manager.changes  security-manager.spec
pc/: security-manager.pc
policy/: CMakeLists.txt  app-author-rules-template.smack  app-rules-template.smack  privilege-group.list  privilege-mapping.list  privileges-tizen-3.0.list  privileges-tizen.list  security-manager-policy-reload  usertype-admin.profile  usertype-guest.profile  usertype-normal.profile  usertype-system.profile
src/: CMakeLists.txt
src/client/: CMakeLists.txt  check-proper-drop.cpp  client-common.cpp  client-label-monitor.cpp  client-offline.cpp  client-security-manager.cpp  label-monitor.cpp
src/client/include/: check-proper-drop.h  client-common.h  client-offline.h
src/cmd/: 50_security-manager-add.post  50_security-manager-remove.pre  50_security-manager.post  CMakeLists.txt  security-manager-cmd.cpp
src/common/: CMakeLists.txt  check-proper-drop.cpp  config.cpp  connection.cpp  credentials.cpp  cynara.cpp  file-lock.cpp  filesystem.cpp  label-files.cpp  master-req.cpp  permissible-set.cpp  privilege_db.cpp  protocols.cpp  service-common.cpp  service_impl.cpp  smack-common.cpp  smack-labels.cpp  smack-rules.cpp  stats.cpp  tzplatform-config.cpp  usertype-profile.cpp  zone-utils.cpp
src/common/include/: check-proper-drop.h  config.h  credentials.h  cynara.h  file-lock.h  filesystem.h  label-files.h  master-req.h  permissible-set.h  privilege_db.h  protocols.h  service-common.h  service_impl.h  smack-common.h  smack-exceptions.h  smack-labels.h  smack-rules.h  stats.h  tzplatform-config.h  usertype-profile.h  utils.h  zone-utils.h
src/dpl/core/include/dpl/: binary_queue.h  serialization.h
src/dpl/db/include/dpl/db/: sql_connection.h
src/dpl/db/src/: sql_connection.cpp
src/dpl/log/include/dpl/log/: log.h  sd_journal_provider.h
src/dpl/log/src/: log.cpp  old_style_log_provider.cpp  sd_journal_provider.cpp
src/include/: CMakeLists.txt  app-manager.h  app-runtime.h  app-sharing.h  label-monitor.h  pkg-paths.h  policy-manager.h  security-manager-types.h  security-manager.h
src/installer/: CMakeLists.txt  sm-installer.cpp
src/installer/include/: sm-installer.h
src/nss/: CMakeLists.txt  nss_securitymanager.cpp
src/server/: CMakeLists.txt
src/server/cleanup/: security-manager-cleanup.cpp
src/server/client/: client-common.cpp  client-common.h  client-security-manager.cpp
src/server/cmd/: security-manager-cmd.cpp
src/server/common/: connection-info.h  message-buffer.cpp  message-buffer.h  protocols.cpp  protocols.h  smack-check.h
src/server/db/: db.sql  privilege_db.cpp
src/server/db/include/: privilege_db.h
src/server/dpl/core/include/dpl/: free_deleter.h  fstream_accessors.h
src/server/main/: generic-event.h  generic-socket-manager.cpp  generic-socket-manager.h  security-manager-util.cpp  security-manager-util.h  server-main.cpp  server2-main.cpp  service-thread.h  socket-manager.cpp  socket-manager.h
src/server/main/include/: socket-manager.h
src/server/service/: base-service.cpp  cynara.cpp  installer.cpp  master-service.cpp  service.cpp  smack-labels.cpp  smack-rules.cpp  smack-rules.h
src/server/service/include/: base-service.h  cynara.h  installer.h  master-service.h  service.h  smack-labels.h
src/tests/: CMakeLists.txt  cynara-admin.cpp  file-lock-test.cpp  security-manager-test.cpp  security-manager-unit-tests.cpp
systemd/: CMakeLists.txt  security-manager-cleanup.service  security-manager-cleanup.service.in  security-manager-master.service.in  security-manager-master.socket  security-manager-master.target  security-manager-rules-loader.service  security-manager-slave.service.in  security-manager-slave.socket  security-manager-slave.target  security-manager.service  security-manager.service.in  security-manager.socket
