INCLUDE_DIRECTORIES(
    ${INCLUDE_PATH}
    ${COMMON_PATH}/include
    ${DPL_PATH}/core/include
    ${DPL_PATH}/log/include
    )

SET(FL_TEST_SOURCES
    ${TESTS_PATH}/file-lock-test.cpp
    )

ADD_EXECUTABLE(${TARGET_FILE_LOCK_TEST} ${FL_TEST_SOURCES})

SET_TARGET_PROPERTIES(${TARGET_FILE_LOCK_TEST}
    PROPERTIES
        COMPILE_FLAGS "-D_GNU_SOURCE -fvisibility=hidden")

TARGET_LINK_LIBRARIES(${TARGET_FILE_LOCK_TEST}
    ${TARGET_COMMON}
    ${TARGET_CLIENT}
    )

INSTALL(TARGETS ${TARGET_FILE_LOCK_TEST} DESTINATION ${BIN_INSTALL_DIR})

