PKG_CHECK_MODULES(TEST_DEP
    REQUIRED
    cynara-client
)

INCLUDE_DIRECTORIES(
    ${INCLUDE_PATH}
    ${TEST_DEP_INCLUDE_DIRS}
    ${COMMON_PATH}/include
    ${DPL_PATH}/core/include
    ${DPL_PATH}/log/include
    )

SET(FL_TEST_SOURCES
    ${TESTS_PATH}/file-lock-test.cpp
    )

SET(SM_TEST_SOURCES
    ${TESTS_PATH}/security-manager-test.cpp
    )

ADD_EXECUTABLE(${TARGET_FILE_LOCK_TEST} ${FL_TEST_SOURCES})
ADD_EXECUTABLE(${TARGET_FILE_SM_TEST} ${SM_TEST_SOURCES})

SET_TARGET_PROPERTIES(${TARGET_FILE_LOCK_TEST} ${TARGET_FILE_SM_TEST}
    PROPERTIES
        COMPILE_FLAGS "-D_GNU_SOURCE -fvisibility=hidden")

TARGET_LINK_LIBRARIES(${TARGET_FILE_LOCK_TEST}
    ${TARGET_COMMON}
    ${TARGET_CLIENT}
    )

TARGET_LINK_LIBRARIES(${TARGET_FILE_SM_TEST}
    ${TARGET_COMMON}
    ${TARGET_CLIENT}
    )

INSTALL(TARGETS ${TARGET_FILE_LOCK_TEST} ${TARGET_FILE_SM_TEST} DESTINATION ${BIN_INSTALL_DIR})

